# projecteuler-haskell

./: .gitignore  config.json  projectEulerHaskell.cabal
src/: CollatzSequence.hs  FastAll.hs  Fibonacci.hs  HighlyDivisibleTriangleNumber.hs  LargestProductInASeries.hs  Multiples.hs  PalindromeProduct.hs  ParallelFibonacci.hs  PrimeFactor.hs  PrimeFactors.hs  Primes.hs  PythagoreanTriplet.hs  QuickSort.hs  SmallestMultiple.hs
test/: doctests.hs
