name:                projectEulerHaskell
version:             0.1.0.0
synopsis:            Project Euler solutions in Haskell
description:         Project Euler solutions in Haskell
license:             PublicDomain
license-file:        LICENSE
author:              Karun Ramakrishnan
maintainer:          karun012@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
  HS-Source-Dirs:      src

test-suite test
  default-language:    Haskell2010
  HS-Source-Dirs:      test
  build-depends:       base >=4.6 && <4.7, QuickCheck, hspec >=1.9.5
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  main-is:             Spec.hs
