name:                projectEulerHaskell
version:             0.1.0.0
synopsis:            Project Euler solutions in Haskell
description:         Project Euler solutions in Haskell
license:             PublicDomain
license-file:        LICENSE
author:              Karun Ramakrishnan <karun012@gmail.com>
author:              David Siefert <siefert.david@gmail.com>
maintainer:          All Authors
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7, directory
  default-language:    Haskell2010
  HS-Source-Dirs:      src

test-suite doctests
  default-language:    Haskell2010
  HS-Source-Dirs:      test
  build-depends:       base >=4.6 && <4.7, doctest, directory, filepath
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             doctests.hs

